desktop almost done, major layout issues

--- a/css/main.css
+++ b/css/main.css
@@ -2,10 +2,124 @@
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  border: 1px solid red;
 }
 
-hr{
-    padding: 0;
+/* default styles from tth */
+input[type="text"],
+input[type="password"],
+input[type="date"],
+input[type="datetime"],
+input[type="email"],
+input[type="number"],
+input[type="search"],
+input[type="tel"],
+input[type="time"],
+input[type="url"],
+textarea,
+select {
+
+  border-radius: 5px;
+  border: none;
+  font-size: 16px;
+  height: auto;
+  margin: 0;
+  outline: 0;
+  padding: 15px;
+  width: 100%;
+  background-color: #eff0f1;
+  color: #8a97a0;
+  box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
+  margin-bottom: 30px;
+
+}
+select  {
+  padding-left:30px;
+}
+
+input[type="radio"],
+input[type="checkbox"] {
+  background-color: red;
+  margin: 0 4px 8px 0;
+  margin-bottom: 15px;
+}
+
+select {
+  -moz-appearance : none;
+  -webkit-appearance: none;
+  padding: 10px 20px;
+  height: 50px;
+  border-radius: 2px;
+  background: url(../arrow.jpg) no-repeat right #eff0f1;
+
+}
+
+button {
+  padding: 19px 39px 18px 39px;
+  color: #FFF;
+  background-color: #4ebbb5;
+  font-size: 18px;
+  text-align: center;
+  font-style: normal;
+  border-radius: 5px;
+  width: 100%;
+  border: 1px solid #3ac162;
+  border-width: 1px 1px 3px;
+  box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset;
+  margin-bottom: 10px;
+}
+
+fieldset {
+  padding:0;
+  margin-bottom: 30px;
+  border: none;
+}
+
+legend {
+  font-size: 1.4em;
+  margin-bottom: 10px;
+}
+
+label {
+  display:block;
+  margin-bottom: 8px;
+  color:grey;
+  padding-bottom:5px;
+}
+
+input[type="checkbox"] + label {
+  display:inline;
+}
+/*label.light {
+  font-weight: 300;
+  display: inline;
+}
+
+
+
+ .number {
+  background-color: #5fcf80;
+  color: #fff;
+  height: 30px;
+  width: 30px;
+  display: inline-block;
+  font-size: 0.8em;
+  margin-right: 4px;
+  line-height: 30px;
+  text-align: center;
+  text-shadow: 0 1px 0 rgba(255,255,255,0.2);
+  border-radius: 100%;
+}
+*/
+
+/* my sick styles */
+hr {
+   border-top: 3px solid #333;
+   margin: 0;
+}
+
+hr.double{
+    padding:  0;
     border: none;
     border-top: thick double #333;
     color: #333;
@@ -20,19 +134,19 @@ hr{
 
 .sign-up {
   text-align: center;
-
-  margin: 0 auto 30px;
+  margin: 0 auto -20px;
   max-width: 90%;
 
 }
 
 .sign-up p {
-  padding-bottom:20px;
+  margin-bottom: 30px;
   color:grey;
 }
 
 form legend {
   font-weight: 700;
+  padding-top: 40px;
   padding-bottom:15px;
 
 }
@@ -52,11 +166,6 @@ form legend {
 :-moz-placeholder { /* Firefox 18- */
   font-style: italic;
   text-align:right;
-}
-
-input:focus { 
-  font-size: 4em;
-    background-color: yellow;
 }
 
 h1 {
@@ -83,115 +192,97 @@ form {
   border-radius: 8px;
   max-width: 90%;
 }
-
-
-
-input[type="text"],
-input[type="password"],
-input[type="date"],
-input[type="datetime"],
-input[type="email"],
-input[type="number"],
-input[type="search"],
-input[type="tel"],
-input[type="time"],
-input[type="url"],
-textarea,
-select {
-  background: rgba(255,255,255,0.1);
-  border: none;
-  font-size: 16px;
-  height: auto;
-  margin: 0;
-  outline: 0;
-  padding: 15px;
-  width: 100%;
-  background-color: #e8eeef;
-  color: #8a97a0;
-  box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
-  margin-bottom: 30px;
+input:focus { 
+  border: 2px solid #2d3945;
+  
 }
 
-input[type="radio"],
-input[type="checkbox"] {
-  margin: 0 4px 8px 0;
+#zip {
+  width: 40%;
+}
+.top-margin {
+margin-top:15px;
+
 }
 
-select {
-  padding: 6px;
-  height: 32px;
-  border-radius: 2px;
+textarea {
+  min-height:150px;
 }
 
-button {
-  padding: 19px 39px 18px 39px;
-  color: #FFF;
-  background-color: #4bc970;
-  font-size: 18px;
+footer {
   text-align: center;
-  font-style: normal;
-  border-radius: 5px;
-  width: 100%;
-  border: 1px solid #3ac162;
-  border-width: 1px 1px 3px;
-  box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset;
-  margin-bottom: 10px;
+  font-style: italic;
+  font-color:grey;
 }
-
-fieldset {
-  padding:0;
-  margin-bottom: 30px;
-  border: none;
-}
-
-legend {
-  font-size: 1.4em;
-  margin-bottom: 10px;
-}
-
-label {
-  display: block;
-  margin-bottom: 8px;
-  color:grey;
-  padding-bottom:5px;
-}
-
-label.light {
-  font-weight: 300;
-  display: inline;
-}
-
-/* .number {
-  background-color: #5fcf80;
-  color: #fff;
-  height: 30px;
-  width: 30px;
-  display: inline-block;
-  font-size: 0.8em;
-  margin-right: 4px;
-  line-height: 30px;
-  text-align: center;
-  text-shadow: 0 1px 0 rgba(255,255,255,0.2);
-  border-radius: 100%;
-}
-*/
-
-@media screen and (min-width: 480px) {
-
- 
-
-}
-
-
 
 
 
 
 @media screen and (min-width: 769px) {
+  .main-title {
+    font-size:1.2em;
+    font-weight: 400;
+  }
   
+  label{
+    padding-top: 12px;
+    height:50px;
+    float: left;
+    width: 17%;
+    margin-right:1em;
+    margin-bottom: 30px;
   }
 
+  input {
+  
+    float:right;
+    max-width: 80%;
+  }
+  select {
+    float:right;
+    max-width:80%;
+  }
 
-@media screen and (min-width: 1025px) {
+  .zip-div {
+    width:80%;
+    float:right;
+  }
+
+  input[type="number"]{
+    float:left;
+  }
+
+  .block {
+    display:block;
+    width: 100%;
+  }
+
+   input[type="checkbox"], input[type="radio"]{
+    display:block;
+    max-width:80%;
+    float:left;
+    height:45px;
+   }
+
+
+  input[type="checkbox"] {
+    padding-bottom: 0;
+    margin-bottom:0;
+    clear:both;
+  }
+  input[type="checkbox"] +label{
+    width:200px;
+    margin-bottom: 1px;
+  }
+
+  #newsletter-format {
+    clear:both;
+    width:100%;
 
   }
+  .no-bottom-margin{
+    margin-bottom: 0;
+  }
+
+}
+
